Css/Blog.css
html {
    position: relative;
    /* not entirely sure if the following is necessary */
    min-height: 100%;
}

p {
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;
}

h1 {
    font-family: 'Open Sans', sans-serif;
    font-weight: 600;
    color: #CA4771;
}

h2 {
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;
    color: #CA4771;
}

.navbar {
    background: #1b1b1bc5;
    top: 0;
}

.navbar-header {
    float: left;
    padding: 15px;
    text-align: center;
    width: 100%;
}

/* #7865B5 */

.nav-item::after {
    content: '';
    display: block;
    width: 0px;
    height: 2px;
    background: #CA4771;
    transition: 0.2s;
}

.nav-item:hover::after {
    width: 100%;
}

.navbar-dark .navbar-nav .active>.nav-link,
.navbar-dark .navbar-nav .nav-link.active,
.navbar-dark .navbar-nav .nav-link.show,
.navbar-dark .navbar-nav .show>.nav-link,
.navbar-dark .navbar-nav .nav-link:focus,
.navbar-dark .navbar-nav .nav-link:hover {
    color: #4EDA99;
}

.dropdown-item:active {
    color: #212529;
}

.dropdown-item:hover {
    background: #CA4771;
}

body {
    background-color: #42484e;
    background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%237f3b79' fill-opacity='0.60'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
    /* background-image: url("/plus2.svg") */
    margin-bottom: 327px;
}

.wraperJournal {
    /* width: 90%; */
    max-width: 1100px;
    margin: 0 auto;
}

.Content-Entry {
    background: #CA4771;
    background-color: #000000;
}

article {
    background-color: #1b1b1bb7;
    box-sizing: border-box;
    padding: 1em;
    margin: 1em auto;
    border-radius: 25px;
    /* max-width: 100%; */
    font-size: 17px;
}

article p {
    /* color: #4EDA99; */
    /* Secondary Color */
    color: #4EDA99;

    display: block;
    text-align: justify;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
}

.meta-title {
    text-align: center;
}

.meta-date {
    text-align: right;
}

footer {
    text-align: center;
    position: absolute;
    bottom: 0;
    width: 100%;
    height: auto;
}

.footer-Content {
    padding-top: 15px;
}

.social-icon {
    list-style: none;
    padding-top: 10px;
    padding-bottom: 5px;
}

.social-icon li {
    display: inline-block;
    text-align: center;
}

.Topfooter {
    /* position: absolute; */
    width: 100%;
    height: 7px;
    background: url(../Media/whaisthis.png);
    /* background-color: ; */
    background-repeat: repeat-x;
}

.foofooter {
    background-color: #1b1b1b59;
}

img {
    max-width: 100%;
    height: auto;
}

.ListHolder {
    display: block;
}

.ListHolder ol li {
    font-weight: 600;
    color: #4EDA99;
    margin-top: 8px;
    font-size: 5.5vmin;
    /* font-size: 1.8vmax; */
    background-color: transparent;
}

.Ro-Map {
    list-style: decimal url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7);
    /* margin-left: -3.2rem; */
}

.Ro-Map li:nth-child(1n):before {
    /* position: relative; */
    margin-top: 20px;
    /* margin-left: -3em; */
}

.Ro-Map li:nth-child(1):before {
    content: "\01F40D";
}

.Ro-Map li:nth-child(2):before {
    content: "\01F436";
}

.Ro-Map li:nth-child(3):before {
    content: "\01F43E";
}

.Ro-Map li:nth-child(4):before {
    content: "\01F579";
}

.Ro-Map li:nth-child(5):before {
    content: "\01F3AE";
}

.Ro-Map li:nth-child(6):before {
    content: "\02699";
}

.Ro-Map li:nth-child(7):before {
    content: "\01F410";
}

